3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Prevent the map loader from crashing when loading maps with incorrect headers.
Changes are based on patch #1275563 by Kevin Rudat.
--
common/map.c: Do not dereference NULL value for map headers without parameter.
Andreas Kirschbaum 2005-12-11

Apply modified second part of patch #1275563 (Crossedit: fix map attributes
window) by Kevin Rudat: let crossedit save/load tiling paths as the mapmaker
entered them, rather than saving the normalized version.
--
common/map.c: Delay path normalization from map loading time
   (load_map_header()) to access time (load_and_link_tiled_map()) if running
   as editor.
Andreas Kirschbaum 2005-12-11

server/move.c: In move_ob() print error message instead of crashing: check
   passed arguments before accessing them.
common/object.c, server/{pets.c,player.c,spell_attack.c,time.c},
socket/request.c: Properly check for P_OUT_OF_MAP after calling
   get_map_flags().
Andreas Kirschbaum 2005-12-10

common/path.c: add missing global.h include.
make_win32/crossfire32.dsp: add path.c and some headers.
Ryo 2005-12-09

Apply slightly modified first part of patch #1275563 (Crossedit: fix map
attributes window) by Kevin Rudat: make the map attributes dialogs work again.
--
crossedit/Attr.c: Remove code to handle map attributes dialogs.
crossedit/Crossedit.ad, crossedit/Crossedit.ad.h: Update X11 resources.
crossedit/Defines.h: Add typedef for MapAttr.
crossedit/{Edit.c,Edit.h}: Remove/update code to handle map attributes
   dialogs.
crossedit/Makefile.am: Add new files MapAttr.c and MapAttr.h.
crossedit/Makefile.in: Rebuilt.
crossedit/{MapAttr.c,MapAttr.h}: New functions containing code to handle the