@@ -3,7 +3,7 @@
 require "util.pl";
 
 if ($#ARGV >= 0) {
-    if ($ARGV[0] =~ m/^--?[hH](elp)?$/){
+    if ($ARGV[0] =~ m/^--?[hH](elp)?$/) {
 	die ("\nUSAGE: perl collect.pl  ARCHDIR\n".
 	     "\nWhere ARCHDIR is the directory where you stored the ".
 	     "raw archetypes.\n".
@@ -135,7 +135,7 @@ sub traverse {
 	$file = $dir."/".$tfile;
 	$name = &basename($file,""); # DIR
 
-        if( -d $file && $name ne "dev" && $name ne "trashbin" && $name ne "CVS" ) {
+	if( -d $file && $name ne "dev" && $name ne "trashbin" && $name ne "CVS" ) {
 	    &traverse($file);
 	} elsif ( -d $file && ( $name eq "dev" || $name eq "trashbin" ) ) {
 # Empty directive to prevent warnings below
@@ -182,14 +182,14 @@ sub storeFaceInfo {
 		&& $lface ne "empty.111") {
 	    &warn($arch." duplicate fg color ".$fg{$lface}."/".$values[0]." face ".$lface);
 	} else {
-		$fg{$lface} = $values[0];
+	    $fg{$lface} = $values[0];
 	}
     }
     if ($values[1] ne "") {
 	if ($bg{$lface} && $bg{$lface} ne $values[1]) {
 	    &warn($arch." duplicate bg color ".$bg{$lface}."/".$values[1]." face ".$lface);
 	} else {
-		$bg{$lface} = $values[1];
+	    $bg{$lface} = $values[1];
 	}
     }
     if ($values[2] ne "" && $lface ne "blank.111" && $lface ne "empty.111") {
@@ -198,21 +198,21 @@ sub storeFaceInfo {
 	if ($visibility{$lface} && $visibility{$lface} ne $values[2]) {
 	    &warn($arch." duplicate visibilty ".$visibility{$lface}."/".$values[2]." face ".$lface);
 	} else {
-		$visibility{$lface} = $values[2];
+	    $visibility{$lface} = $values[2];
 	}
     }
     if ($values[3] ne "" && lface ne "blank.111" && $lface ne "empty.111") {
 	if ($magicmap{$lface} && $magicmap{$lface} ne $values[3]) {
 	    &warn($arch." duplicate magicmap color ".$magicmap{$lface}."/".$values[3]." face ".$lface);
 	} else {
-		$magicmap{$lface} = $values[3];
+	    $magicmap{$lface} = $values[3];
 	}
     }
     if ($values[4] ne "") {
 	if ($floor{$lface} && $floor{$lface} ne $values[4]) {
 	    &warn($arch." duplicate floor information ".$floor{$lface}."/".$values[4]." face ".$lface);
 	} else {
-		$floor{$lface} = $values[4];
+	    $floor{$lface} = $values[4];
 	}
     }
 }
@@ -227,11 +227,11 @@ sub archsOut {
 line:	while(<ARC>) {
 	    chop;
 	    ($var,@values) = split;
-            if ($var eq "#"){
-                #developper comment, switch to next line
-                $commentNum++;
-                next line;
-            }
+	    if ($var eq "#") {
+		#developper comment, switch to next line
+		$commentNum++;
+		next line;
+	    }
 	    if ($var eq "Object") {
 		$lface[0] = "";
 		$#lface = 0;
@@ -248,11 +248,11 @@ line:	while(<ARC>) {
 		if ($#lface !=0) {
 		    $#lface--;
 		    foreach $face (@lface) {
-		        &storeFaceInfo($face, $lfg, $lbg, $lvis,$mm,$floor);
+			&storeFaceInfo($face, $lfg, $lbg, $lvis,$mm,$floor);
 		    }
 	 	}
 		if ($walkon && !$nopick) {
-			&warn("File $arch has an object with walk_on set which can be picked up\n");
+		    &warn("File $arch has an object with walk_on set which can be picked up\n");
 		}
 	    }
 	    # Process the color/face info now
@@ -264,8 +264,8 @@ line:	while(<ARC>) {
 		$lbg = $values[0];
 		next line;
 	    }
-		if ($var eq "end") {
-			print ARCH "editor_folder $pathto\n";
+	    if ($var eq "end") {
+		print ARCH "editor_folder $pathto\n";
 	    }
 	    if ($var eq "visibility") {
 		$lvis = $values[0];
@@ -275,21 +275,21 @@ line:	while(<ARC>) {
 		$mm = $values[0];
 		next line;
 	    }
-      if ($var eq "attacktype") {
-       $at = 0;
-       foreach $t ( @values ) {
-        if ( $t =~ /^\d+$/ ) {
-         $at |= $t;
-        } else {
-         if ( defined( $attacktype{ $t } ) ) {
-          $at |= $attacktype{ $t };
-          } else {
-          &warn($arch . " has invalid attacktype " . $t);
-          }
-        }
-       }
-       $_ = $var . ' ' . $at;
-      }
+	    if ($var eq "attacktype") {
+		$at = 0;
+		foreach $t ( @values ) {
+		    if ( $t =~ /^\d+$/ ) {
+			$at |= $t;
+		    } else {
+			if ( defined( $attacktype{ $t } ) ) {
+			    $at |= $attacktype{ $t };
+			} else {
+			    &warn($arch . " has invalid attacktype " . $t);
+			}
+		    }
+		}
+		$_ = $var . ' ' . $at;
+	    }
 	    if ($var eq "is_floor") {
 		$floor = $values[0];
 		# is_floor is also needed for archs, so let it pass
@@ -327,16 +327,16 @@ line:	while(<ARC>) {
 	    if ($var eq "face" && ! $faces{$values[0]}) {
 		&warn($arch." is missing face ".$values[0])
 	    }
-        if ($var eq "smoothface"){
-            if ($smoothing{$values[0]} && ($smoothing{$values[0]} ne $values[1])){
-                &warn($arch." duplicate smoothface for ".$values[0].": ".$smoothing{$values[0]}." and ".$values[1]);
-            }elsif ( ($values[0] eq "") || ($values[1] eq "")){
-                    &warn ($arch." incomplete smoothface entry found: ".$values[0]." ".$values[1]);
-            }else{
-                $smoothing{$values[0]}=$values[1]
-            }
-            next line;  #smoothface must be excluded from archetype file
-        }
+	    if ($var eq "smoothface") {
+		if ($smoothing{$values[0]} && ($smoothing{$values[0]} ne $values[1])) {
+		    &warn($arch." duplicate smoothface for ".$values[0].": ".$smoothing{$values[0]}." and ".$values[1]);
+		} elsif ( ($values[0] eq "") || ($values[1] eq "")) {
+		    &warn ($arch." incomplete smoothface entry found: ".$values[0]." ".$values[1]);
+		} else {
+		    $smoothing{$values[0]}=$values[1]
+		}
+		next line;  #smoothface must be excluded from archetype file
+	    }
 	    print ARCH $_,"\n";
 	}
 	close(ARC);
@@ -431,10 +431,10 @@ sub facesOut {
 		    last if ($var =~ /^mina\s*$/);
 		    if ($var !~ /^facings/ ) {
 		    	if (! $faces{$var}) {
-				&warn($arch." is missing face ".$var);
+			    &warn($arch." is missing face ".$var);
 			}
 			else {
-				$lface[$#lface++] = $var;
+			    $lface[$#lface++] = $var;
 			}
 		    }
 		    $anim{$animation} .= "$var\n";
@@ -447,20 +447,19 @@ sub facesOut {
     print FACES "# This file is generated by $0, do not edit\n";
     foreach $face (sort(keys %faces)) {
 	if ($fg{$face} ne "" || $bg{$face} ne "" || $visibility{$face} ne "" ||
-	    $magicmap{$face} ne "" || $floor{$face} ne "")
-	{
-	print FACES "face ".$face."\n";
-	print FACES "color_fg ".$fg{$face}."\n"
+	    $magicmap{$face} ne "" || $floor{$face} ne "") {
+	    print FACES "face ".$face."\n";
+	    print FACES "color_fg ".$fg{$face}."\n"
 	    if $fg{$face} ne "";
-	print FACES "color_bg ".$bg{$face}."\n"
+		print FACES "color_bg ".$bg{$face}."\n"
 	    if $bg{$face} ne "";
-	print FACES "visibility ".$visibility{$face}."\n"
+		print FACES "visibility ".$visibility{$face}."\n"
 	    if $visibility{$face} ne "";
-	print FACES "magicmap ".$magicmap{$face}."\n"
+		print FACES "magicmap ".$magicmap{$face}."\n"
 	    if $magicmap{$face} ne "";
-	print FACES "is_floor ".$floor{$face}."\n"
+		print FACES "is_floor ".$floor{$face}."\n"
 	    if $floor{$face} ne "";
-	print FACES "end\n";
+		print FACES "end\n";
 	}
     }
 }
@@ -485,9 +484,9 @@ sub smoothOut {
     print SMOOTHS "# default smooth. Needed for fallbacking\n";
     print SMOOTHS "default_smoothed.111 sdefault.001\n";
     print SMOOTHS "\n# Data extracted from arch files\n";
-    foreach $sm (sort (keys %smoothing)){
-        print SMOOTHS "$sm $smoothing{$sm}\n";
-        $smoothNum++;
+    foreach $sm (sort (keys %smoothing)) {
+	print SMOOTHS "$sm $smoothing{$sm}\n";
+	$smoothNum++;
     }
 }
 
